force-app/main/default/objects/User/fields/Country_Code__c.field-meta.xml
<CustomField>
    <fullName>Country_Code__c</fullName>
    <label>Country Code</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>SE</fullName>
            </value>
            <value>
                <fullName>DK</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>