force-app/main/default/objects/User/fields/NAV_Salesperson_Code__c.field-meta.xml
<CustomField>
    <fullName>NAV_Salesperson_Code__c</fullName>
    <externalId>true</externalId>
    <label>NAV Salesperson Code</label>
    <length>18</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>