force-app/main/default/objects/User/fields/NAVSalesRepCode__c.field-meta.xml
<CustomField>
    <fullName>NAVSalesRepCode__c</fullName>
    <label>Salesperson Code</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>