force-app/main/default/objects/User/fields/User_ID_18_character__c.field-meta.xml
<CustomField>
    <fullName>User_ID_18_character__c</fullName>
    <formula>CASESAFEID(Id)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>User ID 18-character</label>
    <type>Text</type>
</CustomField>