force-app/main/default/objects/User/fields/User_Zero_Id__c.field-meta.xml
<CustomField>
    <fullName>User_Zero_Id__c</fullName>
    <description>Unique Id from Zero</description>
    <externalId>true</externalId>
    <label>User Zero Id</label>
    <length>50</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>