force-app/main/default/objects/User/listViews/Active_Sweden.listView-meta.xml
<ListView>
    <fullName>Active_Sweden</fullName>
    <booleanFilter>(1 OR 2) AND 3</booleanFilter>
    <columns>FULL_NAME</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>CORE.USERS.USERNAME</columns>
    <columns>CORE.USERS.LAST_LOGIN</columns>
    <columns>CORE.USER_ROLE.NAME</columns>
    <columns>CORE.USERS.ACTIVE</columns>
    <columns>LOCALE</columns>
    <columns>User_Zero_Id__c</columns>
    <columns>CORE.PROFILE.NAME</columns>
    <columns>MANAGER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CORE.USER_ROLE.NAME</field>
        <operation>contains</operation>
        <value>SE</value>
    </filters>
    <filters>
        <field>Country_Code__c</field>
        <operation>equals</operation>
        <value>SE</value>
    </filters>
    <filters>
        <field>CORE.USERS.ACTIVE</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Active Sweden</label>
</ListView>